--- a/index.html
+++ b/index.html
@@ -13,46 +13,32 @@
 	
 </head>
 <body>
-	<nav id="main"></nav>
+	
 	
 	<div class="container showgrid">
 		
 		<!-- Your Content -->
+
+		<header>
 		<div class="grid_6 alpha">
+			
 		<h1 class="name">Stine Hansen</h1>
-		
-		<!-- Column 1 -->
 
-		<p>
-		
-
-</p>
-   </div>
-   <div>
-
-		<!-- Column 2 -->
-		<div class="grid_6 omega">
-		<iframe width="420" height="315" src="http://www.youtube.com/embed/ZTpk9x4V53Q" frameborder="0" allowfullscreen></iframe>
-		<h2>Video</h2>
+		<nav id="main">
+			<ul> 
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</nav>
+		</header>
 		</div>
 
-	<!-- Second Row First Column -->
-	<div class="grid_4 alpha">
-		<h4>audio</h4>
-		<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/154566920&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-	</div>
-		<!-- Second Row Second Column -->
-	<div class="grid_4">
-		<h4>Map</h4>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2760836.6626590854!2d-117.5757622!3d47.4873895!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549e393549e827fd%3A0x71e83d74b343adcd!2sCheney%2C+WA+99004!5e0!3m2!1sen!2sus!4v1412879076354" width="300" height="225" frameborder="0" style="border:0"></iframe>
-		
-	</div>
-		<!-- Second Row Third Column -->
-	<div class="grid_4 omega">
-		<h4>More Info</h4>
-		<p>Whoa now. Fill this in, pal.</p>
-	</div>
-	</div>
+
+			<footer>
+			</footer>
+		</div>
 <!-- Clearfix -->
 		<div class="clear"></div>
 
