--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">				
   <link rel="stylesheet" href="css/styles.css">	
-  <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700|Roboto' rel='stylesheet' type='text/css'>
 	
 </head>
 <body>
@@ -22,19 +22,19 @@
 		<header>
 		<div class="grid_6 alpha">
 			
-		<h1 class="name">Stine Hansen</h1>
+		<h1 class="name"><span>stine</span> hansen</h1>
 
 		<nav id="main">
 			<ul> 
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>home</li>
+				<li>about</li>
+				<li>my work</li>
+				<li>contact</li>
 			</ul>
 		</nav>
 		</header>
 		</div>
-
+		<h3>This should be Roboto</h3>
 
 			<footer>
 			</footer>
