--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 		
 		<!-- Your Content -->
 
-		<header>
-		<div class="grid_6 alpha">
+		<header "grid_4 alpha">
+		<div class="grid_4 alpha">
 			
-		<h1 class="name"><span>stine</span> hansen</h1>
-
+		<h1><span>stine</span> hansen</h1>
+	</div>
+	<div class="grid_6">
 		<nav id="main">
 			<ul> 
 				<li>home</li>
@@ -33,16 +34,50 @@
 			</ul>
 		</nav>
 		</header>
-		</div>
-		<h3>This should be Roboto</h3>
+		<div class="column_1 grid_6">
+		<h3>Major: VCD</h3>
+			<ul>
+			<li>I'm pursuing a post-bacc degree in Visual Communication Design because making and fixing things is what I do.
+			<li>My focus is Typography, Information Architecture and Environmental Design.
+			<li>Visual Communication Design is thoughts made real. Visual thinking. Pulling magic from the ether. It's also a great opportunity to use aesthetic means to solve a variety of visual/spacial problems, be they print, web, or environmental.
+			</ul>
+		
+		<div>
+			<h3>Where are you going, where have you been?</h3>
 
-			<footer>
+			<p>I spent over two decades working in the food industry. My formal training in culinary arts has blessed me with the ability to multi-task, work well under pressure, and to experiment creatively. A great chef balances stability and adventurousness, restraint and creativity , humility and self-confidence. I see this kind of adaptability as a great attribute in a design professional.</p>
+
+
+		</div>
+
+		<div>
+			<h3>nomad homes</h3>
+			<ul>
+				<li>github</li>
+				<li>codepen</li>
+				<li>Treehouse</li>
+			<ul>
+		</div>
+		
+		<div>
+		<h3>More about me</h3>
+		<p>Born in Southern California, I've lived in every state on the west coast, as well as the rural Welsh village of Llandbedr Pont Stefan. I moved to Spokane in 2010, and am proud to call it home. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, building things, pondering human nutrition, and my daily haiku practice.</p>
+        </div>
+		<footer>
+			<nav id="subnav">
+				<ul> 
+					<li>home</li>
+					<li>about</li>
+					<li>my work</li>
+					<li>contact</li>
+				</ul>
+			</nav>
 			</footer>
 		</div>
 <!-- Clearfix -->
 		<div class="clear"></div>
 
 	
-  
+ </div> 
 </body>
 </html>
