--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 	<div class="container showgrid">
 		
 		<!-- Your Content -->
+			<!-- Header -->
 
 		<header "grid_4 alpha">
 		<div class="grid_4 alpha">
 			
 		<h1><span>stine</span> hansen</h1>
 	</div>
-	<div class="grid_6">
+	<div class="grid_7">
 		<nav id="main">
 			<ul> 
 				<li>home</li>
@@ -34,36 +35,46 @@
 			</ul>
 		</nav>
 		</header>
-		<div class="column_1 grid_6">
-		<h3>Major: VCD</h3>
-			<ul>
-			<li>I'm pursuing a post-bacc degree in Visual Communication Design because making and fixing things is what I do.
-			<li>My focus is Typography, Information Architecture and Environmental Design.
-			<li>Visual Communication Design is thoughts made real. Visual thinking. Pulling magic from the ether. It's also a great opportunity to use aesthetic means to solve a variety of visual/spacial problems, be they print, web, or environmental.
-			</ul>
+
+		<!-- Major Information -->
+		<div class="column_1 grid_3 omega">
+		<h4>Major: VCD</h4>
+			<p>I'm pursuing post-bacc studies in Visual Communication Design because making and fixing things is what I love to do.
+			My focus is Typography, Information Architecture and Environmental Design.
+			Visual Communication Design is thought made real. Visual thinking. Pulling magic from the ether. It's also a great opportunity to use aesthetic means to solve a variety of visual/spacial problems, be they print, web, or environmental.
+			</p>
+		</div>
+
+		<!-- Backstory -->
 		
-		<div>
-			<h3>Where are you going, where have you been?</h3>
+		<div class="column_2 grid_7">
+			<h2>Where are you going, where have you been?</h2>
 
 			<p>I spent over two decades working in the food industry. My formal training in culinary arts has blessed me with the ability to multi-task, work well under pressure, and to experiment creatively. A great chef balances stability and adventurousness, restraint and creativity , humility and self-confidence. I see this kind of adaptability as a great attribute in a design professional.</p>
 
+			<p> My work is informed by the breadth of my life experience-- at least 40% of which came before the advent of the public internet. I remember Netscape Navigator. And typewriters. Inspired by complexity and drawn to minimalism, all I wanna do is stick the landing. So I practice:</p>
 
-		</div>
+				<ul>
+					<li>github</li>
+					<li>codepen</li>
+					<li>Treehouse</li>
+				<ul>
 
-		<div>
-			<h3>nomad homes</h3>
-			<ul>
-				<li>github</li>
-				<li>codepen</li>
-				<li>Treehouse</li>
-			<ul>
-		</div>
+			<h3>And then there's the other stuff...</h3>
+			<p>Born in Southern California, I've lived in every state on the west coast, as well as the rural Welsh village of Llandbedr Pont Stefan. I moved to Spokane in 2010, and am proud to call it home. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, building things, pondering human nutrition, and my daily haiku practice.</p>
+
+				
+
+			</div>
+
 		
-		<div>
-		<h3>More about me</h3>
-		<p>Born in Southern California, I've lived in every state on the west coast, as well as the rural Welsh village of Llandbedr Pont Stefan. I moved to Spokane in 2010, and am proud to call it home. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, building things, pondering human nutrition, and my daily haiku practice.</p>
-        </div>
-		<footer>
+			
+	
+		
+		
+		
+        
+		<footer class="grid_6">
 			<nav id="subnav">
 				<ul> 
 					<li>home</li>
