--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</header>
 
 		<!-- Major Information -->
-		<div class="column_1 grid_3 omega">
+		<div class="column_1 grid_4 omega">
 		<h4>Major: VCD</h4>
 			<p>I'm pursuing post-bacc studies in Visual Communication Design because making and fixing things is what I love to do.
 			My focus is Typography, Information Architecture and Environmental Design.
@@ -52,25 +52,24 @@
 
 			<p>I spent over two decades working in the food industry. My formal training in culinary arts has blessed me with the ability to multi-task, work well under pressure, and to experiment creatively. A great chef balances stability and adventurousness, restraint and creativity , humility and self-confidence. I see this kind of adaptability as a great attribute in a design professional.</p>
 
-			<p> My work is informed by the breadth of my life experience-- at least 40% of which came before the advent of the public internet. I remember Netscape Navigator. And typewriters. Inspired by complexity and drawn to minimalism, all I wanna do is stick the landing. So I practice:</p>
+			<p> My work is informed by the breadth of my life experience-- at least 40% of which came before the advent of the public internet. I remember Netscape Navigator. <br><br>And typewriters.<br> <br>Inspired by complexity and drawn to minimalism, all I wanna do is stick the landing. So I practice:</p>
 
 				<ul>
 					<li>github</li>
 					<li>codepen</li>
 					<li>Treehouse</li>
-				<ul>
+				</ul>
 
-			<h3>And then there's the other stuff...</h3>
-			<p>Born in Southern California, I've lived in every state on the west coast, as well as the rural Welsh village of Llandbedr Pont Stefan. I moved to Spokane in 2010, and am proud to call it home. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, building things, pondering human nutrition, and my daily haiku practice.</p>
+			<p>My recent projects have included T-shirts, coasters, retail labels and POS materials, as well as some irreverent infographics. They look like this:</p>		
 
+			<div>	
+				<div class="grid_12 alpha omega portolio"></div>
+			<h3>But who are you, really?</h3>
+			<p>Born in Southern California, I've lived in every state on the west coast, as well as the rural Welsh village of Llandbedr Pont Stefan. I moved to Spokane in 2010, and am proud to call it home. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, fermenting probiotic beverages, building things, pondering human nutrition, and my daily haiku practice. It's a wonderful life.</p>
+			</div>	
 				
 
 			</div>
-
-		
-			
-	
-		
 		
 		
         
