--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 			<p>My recent projects have included T-shirts, coasters, retail labels and POS materials, as well as some irreverent infographics. They look like this:</p>		
 
 			<div>	
-				<div class="grid_12 alpha omega portolio"></div>
+				<div class="grid_12 alpha omega portolio">
+			</div>
+
+
 			<h3>But who are you, really?</h3>
 			<p>Born in Southern California, I've lived in every state on the west coast, as well as the rural Welsh village of Llandbedr Pont Stefan. I moved to Spokane in 2010, and am proud to call it home. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, fermenting probiotic beverages, building things, pondering human nutrition, and my daily haiku practice. It's a wonderful life.</p>
 			</div>	
@@ -73,7 +76,7 @@
 		
 		
         
-		<footer class="grid_6">
+		<footer class="bottom_bar grid_12">
 			<nav id="subnav">
 				<ul> 
 					<li>home</li>
@@ -82,7 +85,10 @@
 					<li>contact</li>
 				</ul>
 			</nav>
-			</footer>
+			<p> &copy; 2014. Stine Hansen</p>
+		</footer>
+			
+
 		</div>
 <!-- Clearfix -->
 		<div class="clear"></div>
