--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
 			Visual Communication Design is thought made real. Visual thinking. Pulling magic from the ether. It's also a great opportunity to use aesthetic means to solve a variety of visual/spacial problems, be they print, web, or environmental.
 			</p>
 		</div>
+		<div>	
+			<img src="img/scary-selfie.jpg" alt="Scary Selfie" style="width:320px">
+		</div>
 
 		<!-- Backstory -->
 		
-		<div class="column_2 grid_7">
+		<div class="column_2 grid_7 alpha">
 			<h2>Where are you going, where have you been?</h2>
 
 			<p>I spent over two decades working in the food industry. My formal training in culinary arts has blessed me with the ability to multi-task, work well under pressure, and to experiment creatively. A great chef balances stability and adventurousness, restraint and creativity , humility and self-confidence. I see this kind of adaptability as a great attribute in a design professional.</p>
