--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 
 		<header "grid_4 alpha">
 		<div class="grid_4 alpha">
+			<div>	
+			<img src="img/scary-selfie.jpg" alt="Scary Selfie" style="width:320px">
+		</div>
 			
 		<h1><span>stine</span> hansen</h1>
-	</div>
-	<div class="grid_7">
+	   </div>
+	<div class="topbar grid_6">
 		<nav id="main">
 			<ul> 
 				<li>home</li>
@@ -44,9 +47,7 @@
 			Visual Communication Design is thought made real. Visual thinking. Pulling magic from the ether. It's also a great opportunity to use aesthetic means to solve a variety of visual/spacial problems, be they print, web, or environmental.
 			</p>
 		</div>
-		<div>	
-			<img src="img/scary-selfie.jpg" alt="Scary Selfie" style="width:320px">
-		</div>
+		
 
 		<!-- Backstory -->
 		
