--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			
 		<h1><span>stine</span> hansen</h1>
 	   </div>
-	<div class="topbar grid_6">
-		<nav id="main">
+	
+		<nav id="main" class="grid_6">
 			<ul> 
 				<li>home</li>
 				<li>about</li>
@@ -38,6 +38,18 @@
 			</ul>
 		</nav>
 		</header>
+
+
+		<!-- PHOTOS -->
+		<div class="grid_4 alpha coasters">
+			<img src="img/coaster1.jpg" alt="Bauhaus Coaster" style="width:320px">
+			<img src="img/coaster2.jpg" alt="Futurist Coaster" style="width:320px">
+			<img src="img/coaster3.jpg" alt="Surrealist Coaster" style="width:320px">
+			<img src="img/coaster4.jpg" alt="Swiss Style Coaster" style="width:320px">
+			<img src="img/coaster5.jpg" alt="Marmot Propaganda Coaster" style="width:320px">
+		</div>
+
+
 
 		<!-- Major Information -->
 		<div class="column_1 grid_4 omega">
