--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700|Roboto' rel='stylesheet' type='text/css'>
 	
 </head>
-<body>
+<body class="background layer">
 	
 	
 	<div class="container showgrid">
