--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 		<!-- Major Information -->
-		<div class="column_1 grid_4 omega">
+		<div class="column_1 grid_7">
 		<h4>Major: VCD</h4>
 			<p>I'm pursuing post-bacc studies in Visual Communication Design because making and fixing things is what I love to do.
 			My focus is Typography, Information Architecture and Environmental Design.
@@ -63,7 +63,7 @@
 
 		<!-- Backstory -->
 		
-		<div class="column_2 grid_7 alpha">
+		<div class="column_2 grid_7 ">
 			<h2>Where are you going, where have you been?</h2>
 
 			<p>I spent over two decades working in the food industry. My formal training in culinary arts has blessed me with the ability to multi-task, work well under pressure, and to experiment creatively. A great chef balances stability and adventurousness, restraint and creativity , humility and self-confidence. I see this kind of adaptability as a great attribute in a design professional.</p>
