--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
 		<!-- Your Content -->
 			<!-- Header -->
 
-		<header "grid_4 alpha">
-		<div class="grid_4 alpha">
+		<header "grid_12 alpha">
+		
 			<div>	
-			<img src="img/scary-selfie.jpg" alt="Scary Selfie" style="width:320px">
-		</div>
-			
+				<img src="img/scary-selfie.jpg" alt="Scary Selfie" style="width:320px"class="selfie-left">
+				<img src="img/scary-selfie-reflect.jpg" alt="Scary Selfie Too" style="width:320px" class="selfie-right">
+			</div>
+		<div class="banner">	
 		<h1><span>stine</span> hansen</h1>
-	   </div>
-	
-		<nav id="main" class="grid_6">
+		<nav id="main" class="grid_7 omega">
 			<ul> 
 				<li>home</li>
 				<li>about</li>
@@ -37,6 +36,10 @@
 				<li>contact</li>
 			</ul>
 		</nav>
+
+	   </div>
+	
+		
 		</header>
 
 
@@ -52,8 +55,8 @@
 
 
 		<!-- Major Information -->
-		<div class="column_1 grid_7">
-		<h4>Major: VCD</h4>
+		<div class="column_1 grid_7 omega">
+		<h2>Major: VCD</h2>
 			<p>I'm pursuing post-bacc studies in Visual Communication Design because making and fixing things is what I love to do.
 			My focus is Typography, Information Architecture and Environmental Design.
 			Visual Communication Design is thought made real. Visual thinking. Pulling magic from the ether. It's also a great opportunity to use aesthetic means to solve a variety of visual/spacial problems, be they print, web, or environmental.
@@ -63,12 +66,12 @@
 
 		<!-- Backstory -->
 		
-		<div class="column_2 grid_7 ">
+		<div class="column_2 grid_7 omega">
 			<h2>Where are you going, where have you been?</h2>
 
 			<p>I spent over two decades working in the food industry. My formal training in culinary arts has blessed me with the ability to multi-task, work well under pressure, and to experiment creatively. A great chef balances stability and adventurousness, restraint and creativity , humility and self-confidence. I see this kind of adaptability as a great attribute in a design professional.</p>
 
-			<p> My work is informed by the breadth of my life experience-- at least 40% of which came before the advent of the public internet. I remember Netscape Navigator. <br><br>And typewriters.<br> <br>Inspired by complexity and drawn to minimalism, all I wanna do is stick the landing. So I practice:</p>
+			<p> My work is informed by the breadth of my life experience-- at least 40% of which came before the advent of the publicly accessible internet. I remember Netscape Navigator. <br><br>And typewriters.<br> <br>Inspired by complexity and drawn to minimalism, all I wanna do is stick the landing. So I practice:</p>
 
 				<ul>
 					<li>github</li>
@@ -76,15 +79,13 @@
 					<li>Treehouse</li>
 				</ul>
 
-			<p>My recent projects have included T-shirts, coasters, retail labels and POS materials, as well as some irreverent infographics. They look like this:</p>		
+			<p>My recent work has included T-shirts, coasters, retail labels and POS materials, as well as some irreverent infographics. The coasters to the left were a project from Spring Quarter.</p>		
 
-			<div>	
-				<div class="grid_12 alpha omega portolio">
 			</div>
+			<div class="column_3 grid_7 omega">
 
-
-			<h3>But who are you, really?</h3>
-			<p>Born in Southern California, I've lived in every state on the west coast, as well as the rural Welsh village of Llandbedr Pont Stefan. I moved to Spokane in 2010, and am proud to call it home. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, fermenting probiotic beverages, building things, pondering human nutrition, and my daily haiku practice. It's a wonderful life.</p>
+			<h2> But who are you, really?</h2>
+			<p>Born in Southern California, I've lived in every state on the west coast, as well as the rural Welsh village of <a href="http://en.wikipedia.org/wiki/Lampeter" target="_blank">Llandbedr Pont Stefan</a>. I moved to Spokane in 2010, and am proud to call it home. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, fermenting probiotic beverages, building things, pondering human nutrition, and my <a href="http://spoku.blogspot.com/" target="_blank">daily haiku</a> practice. <br><br>It's a wonderful life.</p>
 			</div>	
 				
 
