--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
 		<!-- Major Information -->
 		<div class="column_1 grid_7 omega">
 		<h2>Major: VCD</h2>
-			<p>I'm pursuing post-bacc studies in Visual Communication Design because making and fixing things is what I love to do.
-			My focus is Typography, Information Architecture and Environmental Design.
-			Visual Communication Design is thought made real. Visual thinking. Pulling magic from the ether. It's also a great opportunity to use aesthetic means to solve a variety of visual/spacial problems, be they print, web, or environmental.
+			<p>I'm pursuing post-baccalaureate studies in Visual Communication Design because making and fixing things is what I love to do. My current areas of interest include Typography, Information Architecture and Environmental Design. I'm particulary interested in Edward Tufte's work on analyzing visual data, and the too often blurred lines between accuracy and artfulness. To me, Visual Communication Design is thought made real. Visual thinking. Pulling magic from the ether. It's also a great opportunity to use aesthetic means to solve a variety of visual/spacial problems, be they print, web, or environmental.
 			</p>
 		</div>
 		
