--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 			<p>I spent over two decades working in the food industry. My formal training in culinary arts has blessed me with the ability to multi-task, work well under pressure, and to experiment creatively. A great chef balances stability and adventurousness, restraint and creativity , humility and self-confidence. I see this kind of adaptability as a great attribute in a design professional.</p>
 
-			<p> My work is informed by the breadth of my life experience-- at least 40% of which came before the advent of the publicly accessible internet. I remember Netscape Navigator. <br><br>And typewriters.<br> <br>Inspired by complexity and drawn to minimalism, all I wanna do is stick the landing. So I practice:</p>
+			<p> My work is informed by the breadth of my life experience-- at least 40% of which came before the advent of the publicly accessible internet. I remember Netscape Navigator. And typewriters.<br> <br>Inspired by complexity and drawn to minimalism, all I wanna do is stick the landing. So I practice:</p>
 
 				<ul>
 					<li>github</li>
@@ -85,7 +85,7 @@
 			<h2> But who are you, really?</h2>
 			<p>Born in Southern California, I've lived in every state on the west coast, as well as the rural Welsh village of <a href="http://en.wikipedia.org/wiki/Lampeter" target="_blank">Llandbedr Pont Stefan</a>. I moved to Spokane in 2010, and am proud to call it home. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, fermenting probiotic beverages, building things, pondering human nutrition, and my <a href="http://spoku.blogspot.com/" target="_blank">daily haiku</a> practice. <br><br>It's a wonderful life.</p>
 			</div>	
-					<footer class="bottom_bar grid_12 alpha">
+			<footer class="grid_12 alpha">
 			<nav id="subnav">
 				<ul> 
 					<li>home</li>
@@ -94,7 +94,9 @@
 					<li>contact</li>
 				</ul>
 			</nav>
+			<div>
 			<p> &copy; 2014. Stine Hansen</p>
+			<div>
 		    </footer>	
 
 			</div>
