--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		<h1><span>stine</span> hansen</h1>
 		<nav id="main" class="grid_7 omega">
 			<ul> 
-				<li>home</li>
-				<li>about</li>
-				<li>my work</li>
-				<li>contact</li>
+				<a href="#"><li>home</li></a>
+				<a href="#"><li>about</li></a>
+				<a href="#"><li>my work</li></a>
+				<a href="#"><li>contact</li></a>
 			</ul>
 		</nav>
 
@@ -77,7 +77,7 @@
 					<li>Treehouse</li>
 				</ul>
 
-			<p>My recent work has included T-shirts, coasters, retail labels and POS materials, as well as some irreverent infographics. The coasters to the left were a project from Spring Quarter.</p>		
+			<p>My recent work has included T-shirts, coasters, retail labels and POS materials, as well as some irreverent infographics. The coasters to the left were a project from  the Design History class, Spring Quarter, 2014.</p>		
 
 			</div>
 			<div class="column_3 grid_7 omega">
@@ -88,11 +88,11 @@
 			<footer class="grid_12 alpha">
 			<nav id="subnav">
 				<ul> 
-					<li>home</li>
-					<li>about</li>
-					<li>my work</li>
-					<li>contact</li>
-				</ul>
+				<a href="#"><li>home</li></a>
+				<a href="#"><li>about</li></a>
+				<a href="#"><li>my work</li></a>
+				<a href="#"><li>contact</li></a>
+			</ul>
 			</nav>
 			<div>
 			<p> &copy; 2014. Stine Hansen</p>
