--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<meta name="viewport" content="width=device-width">
   <meta charset="UTF-8" />
   <title>P1 Bio Stine Hansen</title>
 
