--- a/index.html
+++ b/index.html
@@ -24,17 +24,14 @@
 
 		<header "grid_12 alpha">
 		
-			<div>	
-				<img src="img/scary-selfie.jpg" alt="Scary Selfie" style="width:320px"class="selfie-left">
-				<img src="img/scary-selfie-reflect.jpg" alt="Scary Selfie Too" style="width:320px" class="selfie-right">
-			</div>
+			
 		<div class="banner">	
 		<h1><span>stine</span> hansen</h1>
 		<nav id="main" class="grid_7 omega">
 			<ul> 
-				<a href="#"><li>home</li></a>
+				<a href="#"><li>work</li></a>
+				<a href="#"><li>backstory</li></a>
 				<a href="#"><li>about</li></a>
-				<a href="#"><li>my work</li></a>
 				<a href="#"><li>contact</li></a>
 			</ul>
 		</nav>
@@ -86,14 +83,10 @@
 				<p>Born in Southern California, a while back, I've lived in every state on the west coast, and the rural Welsh village of <a href="http://en.wikipedia.org/wiki/Lampeter" target="_blank">Llandbedr Pont Stefan</a>. I moved to Spokane in 2010, and am happy to call it my hometown. My spare time is consumed with cycling, wrenching on bikes, growing and cooking food, fermenting probiotic beverages, fixing things, designing things, building things, and the <a href="http://spoku.blogspot.com/" target="_blank">daily haiku</a> practice I started a couple years ago. It's all kinds of wonderful.</p>
 			</section>	
 			<footer class="grid_12 alpha">
-				<nav id="subnav">
-					<ul> 
-					<a href="#"><li>home</li></a>
-					<a href="#"><li>about</li></a>
-					<a href="#"><li>my work</li></a>
-					<a href="#"><li>contact</li></a>
-				</ul>
-				</nav>
+				<div>	
+				<img src="img/scary-selfie.jpg" alt="Scary Selfie" style="width:320px"class="selfie-left">
+				<img src="img/scary-selfie-reflect.jpg" alt="Scary Selfie Too" style="width:320px" class="selfie-right">
+			</div>
 				<div>
 				<p> &copy; 2014. Stine Hansen</p>
 				<div>
