--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
 		
 			
 		<div class="banner">	
-		<h1><span>stine</span> hansen</h1>
 		<nav id="main" class="grid_7 omega">
 			<ul> 
-				<a href="#"><li>work</li></a>
-				<a href="#"><li>backstory</li></a>
-				<a href="#"><li>about</li></a>
-				<a href="#"><li>contact</li></a>
+				<a href="http://cstineyb.github.io/p4-portfolio" target="_blank"><li>work</li></a>
+				<a href="http://cstineyb.github.io/p2-resume" target="_blank"><li>backstory</li></a>
+				<a href="http://cstineyb.github.io/p1-bio"target="_blank"><li>about</li></a>
 			</ul>
 		</nav>
 
