--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<ul> 
 				<a href="http://cstineyb.github.io/p4-portfolio" target="_blank"><li>work</li></a>
 				<a href="http://cstineyb.github.io/p2-resume" target="_blank"><li>backstory</li></a>
-				<a href="http://cstineyb.github.io"target="_blank"><li>home</li></a>
+				<a href="http://cstineyb.github.io/home"target="_blank"><li>home</li></a>
 			</ul>
 		</nav>
 
